--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
     - Back-end:
         - Getting Started: 'back-end/getting-started.md'
         - Entities: 'back-end/entities.md'
+        - Repositories: 'back-end/repositories.md'
         # - Type Auth:
         #     - Introduction: 'back-end/type-auth/introduction.md'
 extra_css:
