--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
         - Entities: 'back-end/entities.md'
         - OData: 'back-end/odata.md'
         - Repositories: 'back-end/repositories.md'
+        - Controllers: 'back-end/controllers.md'
         # - Type Auth:
         #     - Introduction: 'back-end/type-auth/introduction.md'
 extra_css:
