--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
         - OData: 'back-end/odata.md'
         - Repositories: 'back-end/repositories.md'
         - Controllers: 'back-end/controllers.md'
+        - Deployment: 'back-end/deployment.md'
     - Front-end:
         - Getting Started: 'front-end/getting-started.md'
         - List: 'front-end/list.md'
