Add File Structure And Checklist To getting-started.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,5 +61,8 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.superfences
+  - def_list
+  - pymdownx.tasklist:
+      custom_checkbox: true
 
 
