--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
         - Repositories: 'back-end/repositories.md'
         - Controllers: 'back-end/controllers.md'
         - Completing API Setup: 'back-end/complete-api-setup.md'
+        - Testing: 'back-end/testing.md'
         # - OData: 'back-end/odata.md'
         - Deployment: 'back-end/deployment.md'
     - Front-end:
